--- a/home/src/app.html
+++ b/home/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
+		<meta name="robots" content="noindex">
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
 		<link rel="stylesheet" href="/global.css" />
