--- a/home/src/app.html
+++ b/home/src/app.html
@@ -8,9 +8,9 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
 		<link rel="stylesheet" href="/global.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div>%svelte.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
