--- a/buzzing/src/app.html
+++ b/buzzing/src/app.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" href="/global.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
